# CodexPilot

./: .gitignore  Cargo.toml  LICENSE  README.en.md  README.md
.github/: release.yml
.github/workflows/: create-release.yml  release-assets.yml
apps/codex-pilot-launcher/: Cargo.toml
apps/codex-pilot-launcher/src/: main.rs
apps/codex-pilot-manager/: index.html  package-lock.json  package.json
apps/codex-pilot-manager/src/: appSupport.tsx  autoLaunch.test.ts  autoLaunch.ts  main.tsx  styles.css  types.ts
apps/codex-pilot-manager/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
assets/inject/: renderer-inject.js
crates/codex-pilot-core/: Cargo.toml
crates/codex-pilot-core/src/: app_paths.rs  assets.rs  bridge.rs  ccs_import.rs  cdp.rs  diagnostic_log.rs  error.rs  helper.rs  launcher.rs  lib.rs  ports.rs  protocol_proxy.rs  relay_config.rs  routes.rs  status.rs
crates/codex-pilot-data/: Cargo.toml
crates/codex-pilot-data/src/: lib.rs  markdown.rs  provider_sync.rs  session_zip.rs  storage.rs
crates/codex-pilot-data/src/markdown/: mod.rs  render.rs
crates/codex-pilot-data/src/provider_sync/: inspect.rs  mod.rs  run.rs  sqlite.rs
crates/codex-pilot-data/src/storage/: codex_threads.rs  delete_undo.rs  mod.rs  models.rs  schema.rs
docs/: features.en.md  features.md
docs/development/: diagnostic-log-flaky-analysis.md  markdown-split-mapping.md  provider-sync-split-mapping.md  readme-guidelines.md  refactor-backlog.md  storage-split-mapping.md
scripts/: check-manager-theme-colors.mjs  package-macos.sh  test-renderer-inject.mjs
(+33 files in other folders)
